# Open-G-Hub

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml  codeql.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: buttons.rs  comm.rs  device.rs  dpi.rs  error.rs  hidpp.rs  integration_tests.rs  lib.rs  onboard.rs  profile.rs  report_rate.rs  safety.rs  transport.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
docs/: PACKAGING.md
scripts/: build-windows-portable.ps1  install-winusb-driver.bat  install-winusb-driver.ps1
