[workspace]
members = ["crates/core", "crates/gui", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/user/open-g-hub"
description = "Open-source cross-platform replacement for Logitech G Hub mouse configuration"

[workspace.dependencies]
# HID communication
# Use linux-native-basic-udev to avoid pkg-config dependency on libudev-dev
hidapi = { version = "2.6", default-features = false, features = ["linux-native-basic-udev"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# GUI
iced = { version = "0.13", features = ["tokio"] }

# Async
tokio = { version = "1", features = ["rt", "macros"] }
