[package]
name = "open-g-hub-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library: HID++ protocol, device discovery, and mouse configuration"

[dependencies]
hidapi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
